--- a/webview-ui/src/components/styles/ChatView.css
+++ b/webview-ui/src/components/styles/ChatView.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh; /* Ensure the container fills the height of the viewport */
+  text-align: left;
 }
 
 .messages-container {
@@ -25,7 +26,7 @@
 
 .input-container {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   padding: 10px;
 }
 
@@ -51,7 +52,7 @@
 }
 
 .input-container button:hover {
-  background-color: #0056b3;
+  
 }
 
 .divider {
